# parquet_metadata

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yaml  release.yaml
src/: main.rs  printer.rs
testdata/: pandas-broken-arrow.parquet  pandas.parquet
