[package]
name = "parquet_metadata"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "53.3.0"
base64 = "0.22.1"
clap = { version = "4.5.21", features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
], default-features = false }
parquet = "53.3.0"
