[package]
name = "parquet_metadata"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "53.3.0"
base64 = "0.22.1"
clap = { version = "4.5.22", features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
], default-features = false }
parquet = "53.3.0"
comfy-table = "7.1.3"
