[package]
name = "parquet_metadata"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "58.0.0"
base64 = "0.22.1"
clap = { version = "4.5.60", features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
], default-features = false }
parquet = "58.0.0"
comfy-table = "7.2.2"
